--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="css/style.css">
     <!--Link favicon-->
     <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
-    <title>Art</title>
+    <title>Arte</title>
 </head>
 <body>
     <!--Header-->
@@ -37,11 +37,77 @@
     <div class="container" id="main-image-contain">
         <div class="main-image center-image">
             <div class="main-image-info">
-                <h2>Arte no muro de Davi</h2>
+                <h2>Arte no muro de Wallace</h2>
                 <p class="secondary-color">Realizada em 20/05/2021</p>
                 <a href="#" class="btn">Detalhes</a>
             </div>
         </div>
     </div>
+    <!-- Galeria de fotos-->
+    <div class="container" id="gallery-container">
+        <div class="col-12">
+            <h1>Artes em destaque</h1>
+        </div>
+        <!--Imagem 2-->
+        <div class="row gx-md-5">
+            <div class="col-12 col-md-6">
+                <div class="small-image-container center-image" id="img2"></div>
+                <h3>Arte de Matheus</h3>
+                <p class="secondary-color">Realizada em: 26/01/2018</p>
+                <a href="#" class="btn">Detalhes</a>              
+            </div>
+            <!--Imagem 3-->
+            <div class="col-12 col-md-6">
+                <div class="small-image-container center-image" id="img3"></div>
+                <h3>Obra de Jhow</h3>
+                <p class="secondary-color">Realizada em: 14/06/2021</p>
+                <a href="#" class="btn">Detalhes</a>
+            </div>        
+            <!--Imagem 4-->
+            <div class="col-12 col-md-6">
+                <div class="small-image-container center-image" id="img4"></div>
+                <h3>Arte de Gui</h3>
+                <p class="secondary-color">Realizada em: 19/01/2018</p>
+                <a href="#" class="btn">Detalhes</a>
+            </div>
+            <!--Imagem 5-->
+            <div class="col-12 col-md-6">
+                <div class="small-image-container center-image" id="img5"></div>
+                <h3>Obra de Will</h3>
+                <p class="secondary-color">Realizada em: 20/02/2003</p>
+                <a href="#" class="btn">Detalhes</a>
+            </div>
+            <!--Imagem 6-->
+            <div class="col-12 col-md-6">
+                <div class="small-image-container center-image" id="img6"></div>
+                <h3>Arte de Leo</h3>
+                <p class="secondary-color">Realizada em: 14/09/2001</p>
+                <a href="#" class="btn">Detalhes</a>
+            </div>
+            <!--Imagem 7-->
+            <div class="col-12 col-md-6">
+                <div class="small-image-container center-image" id="img2"></div>
+                <h3>Arte de Thiago</h3>
+                <p class="secondary-color">Realizada em: 24/08/2022</p>
+                <a href="#" class="btn">Detalhes</a>
+            </div>
+        </div>
+    </div>
+    <!--Rodapé-->
+    <footer class="container">
+        <p class="secondary-color">Entre em contato:</p>
+        <div class="row justify-content-center" id="social-icons-container">
+            <div class="col-1">
+                <a href="#"><i class="bi bi-facebook secondary-color"></i></a>
+            </div>
+            <div class="col-1">
+                <a href="#"><i class="bi bi-instagram secondary-color"></i></a>
+            </div>
+            <div class="col-1">
+            <a href="#"><i class="bi bi-whatsapp secondary-color"></i></a>
+            </div>
+        </div>
+        <p class="secondary-color">Arte &copy; 2021</p>
+    </footer>
 </body>
 </html>
